[gd_scene load_steps=4 format=3 uid="uid://c2krhqnewioyn"]

[ext_resource type="Script" uid="uid://c7g5ct1ry7wrd" path="res://scenes/leak.gd" id="1_hg431"]

[sub_resource type="Gradient" id="Gradient_blq7k"]
colors = PackedColorArray(1, 1, 1, 0.7294118, 1, 1, 1, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_hg431"]
radius = 175.34537

[node name="Leak" type="Node2D"]
script = ExtResource("1_hg431")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
scale = Vector2(1.5, 1.5)
amount = 150
direction = Vector2(0, 1)
spread = 26.1
gravity = Vector2(0, 0)
initial_velocity_min = 60.0
initial_velocity_max = 100.0
color_ramp = SubResource("Gradient_blq7k")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_hg431")

[node name="ZoomPoint" type="Node2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
